[Fetch API] Pass web-platform fetch/api/cors/cors-preflight.html.

The failures are because the expected result is a list of
header names separated only be "," (comma),
but Blink instead returns a list of header names separate by ", ".
So I modify it from ", "(comma + space) to ","(comma).

BUG=672656

Review-Url: https://codereview.chromium.org/2603713003
Cr-Commit-Position: refs/heads/master@{#442170}

Former-commit-id: 0f762fedb8512772504cd5548b93f2523ec1e3a2